--- a/requirements.txt
+++ b/requirements.txt
@@ -6,5 +6,7 @@ python-dotenv==1.0.0
 shortuuid==1.0.11
 python-dateutil==2.8.2
 requests==2.31.0
-paypal-checkout-serversdk==1.0.1
+paypal-checkout-serversdk==1.2.2
+email-validator==2.0.0
 Werkzeug==2.3.7
+gunicorn==21.2.0
